# n-body

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cu  matmul.cu
lib/: helper_cuda.hu  render.cu  render.hu  step.cuh  step.hu
perf/: nbody.cu  reduce.cu  reduce.cuh  reduce.hu
